# micrograd-cpp

./: CMakeLists.txt  LICENSE  README.md  Value.h  main.cpp  nn.h  value.cpp
